src/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
@import 'mapbox-gl/dist/mapbox-gl.css';
@import 'swiper/css';
@import 'swiper/css/a11y';
@import 'swiper/css/pagination';

@tailwind base;
@tailwind components;
@tailwind utilities;

.swiper-pagination-bullet {
  @apply shadow-md;
}

@layer base {
  :root {
    --swiper-theme-color: hsl(var(--nextui-primary));
    --swiper-pagination-bottom: 1rem;
    --swiper-pagination-bullet-width: 5rem;
    --swiper-pagination-bullet-height: 1rem;
    --swiper-pagination-bullet-border-radius: 8px;
  }

  main {
    color: #7b7b7b;
    @apply lining-nums;
  }

  a {
    color: inherit !important;
  }
}

@layer components {
  .bg-panel {
    @apply backdrop-blur-lg backdrop-saturate-150 bg-background/90;
  }

  .bg-panel-thin {
    @apply bg-panel bg-background/70;
  }

  .bg-panel-hover {
    @apply backdrop-blur-lg backdrop-saturate-150 bg-background/90 hover:bg-background/70;
  }
}

@layer utilities {
  .flex-center {
    @apply flex items-center justify-center;
  }

  .flex-center-x {
    @apply flex justify-center;
  }

  .flex-center-y {
    @apply flex items-center;
  }

  .colored-links a {
    @apply text-primary hover:opacity-hover !important;
  }
}

